# myJunk

./: .travis.yml  CMakeLists.txt  README.md  tests.cpp
src/cppds/: CMakeLists.txt  singly_linked_list.h
src/misc/: CMakeLists.txt  calculator.c  calculator.h  fixedpoint.c  fixedpoint.h  sync.c  sync.h
src/simple/: CMakeLists.txt  calculator.c  calculator.h
test/cppds/: CMakeLists.txt  main.cpp  singly_linked_list_test.cpp
test/misc/: CMakeLists.txt  calculator_test.cpp  fixedpoint_test.cpp  main.cpp  sync_test.cpp
test/simple/: CMakeLists.txt
